Changed links to files
about-katie
contact-katie
katie-portfolio

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
           <li role="presentation">
             <a
-              href="portfolio.html"
+              href="katie-portfolio.html"
               role="menuitem"
               class="navigation-list__item navigation-list__item--active"
               >My Work</a
@@ -50,7 +50,7 @@
           </li>
           <li role="presentation">
             <a
-              href="about.html"
+              href="about-katie.html"
               role="menuitem"
               class="navigation-list__item"
               >About Me</a
@@ -58,7 +58,7 @@
           </li>
           <li role="presentation">
             <a
-              href="contact.html"
+              href="contact-katie.html"
               role="menuitem"
               class="navigation-list__item"
               >Contact</a
