--- a/about-katie.html
+++ b/about-katie.html
@@ -43,7 +43,7 @@
           </li>
           <li role="presentation">
             <a
-              href="portfolio.html"
+              href="katie-portfolio.html"
               role="menuitem"
               class="navigation-list__item navigation-list__item--active"
               >My Work</a
@@ -51,7 +51,7 @@
           </li>
           <li role="presentation">
             <a
-              href="about.html"
+              href="about-katie.html"
               role="menuitem"
               class="navigation-list__item"
               >About Me</a
@@ -59,7 +59,7 @@
           </li>
           <li role="presentation">
             <a
-              href="contact.html"
+              href="contact-katie.html"
               role="menuitem"
               class="navigation-list__item"
               >Contact</a
