--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       />
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="index.html"
               role="menuitem"
@@ -40,7 +40,7 @@
               >Home</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="katie-portfolio.html"
               role="menuitem"
@@ -48,7 +48,7 @@
               >My Work</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="about-katie.html"
               role="menuitem"
@@ -56,7 +56,7 @@
               >About Me</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="contact-katie.html"
               role="menuitem"
@@ -88,9 +88,6 @@
         >
       </div>
     </main>
-    <!-- <img
-        src="images/FrederickRoundSVG.svg"
-      /> -->
     <footer class="page-footer">
       <p class="footer-paragraph">Find me on</p>
       <div class="social-media">
