Moved transitions to all pages and animation added

--- a/about-katie.html
+++ b/about-katie.html
@@ -24,7 +24,6 @@
   </head>
   <body>
     <header class="page-header">
-      <!-- remove dup -->
       <img
         src="images/blue-white-side.jpeg"
         src="images/logo.jpeg"
@@ -33,7 +32,7 @@
       />
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="index.html"
               role="menuitem"
@@ -41,7 +40,7 @@
               >Home</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="katie-portfolio.html"
               role="menuitem"
@@ -49,7 +48,7 @@
               >My Work</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="about-katie.html"
               role="menuitem"
@@ -57,7 +56,7 @@
               >About Me</a
             >
           </li>
-          <li role="presentation">
+          <li role="presentation" class="transition">
             <a
               href="contact-katie.html"
               role="menuitem"
@@ -114,8 +113,8 @@
           >Download my CV</a
         >
       </div>
-      
- <div class="svg">
+
+      <div class="svg">
         <svg
           xmlns:dc="http://purl.org/dc/elements/1.1/"
           xmlns:cc="http://creativecommons.org/ns#"
@@ -2451,7 +2450,7 @@
           Image by
           <a
             href="https://www.freepik.com/free-vector/spring-landscape_12339026.htm#query=outdoors&position=21&from_view=search&track=sph"
-            
+            class="portfolio-link"
             >Freepik</a
           >
         </div>
