HTML linter run and fixed

--- a/contact-katie.html
+++ b/contact-katie.html
@@ -9,7 +9,7 @@
     />
     <title>Contact</title>
     <link rel="shortcut icon" href="images/wikipedia-favicon.ico" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Josefin+Sans:wght@100;300&display=swap"
@@ -20,13 +20,16 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="css/style.production.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="css/style.production.css"
+    />
   </head>
   <body>
     <header class="page-header">
       <img
         src="images/blue-white-side.jpeg"
-        src="images/logo.jpeg"
         alt="katie sharples logo"
         class="page-header__item"
       />
@@ -95,15 +98,15 @@
         <div class="address">
           Katie Sharples<br />
           Frederick, MD<br />
-          21701
-          USA<br />
+          21701 USA<br />
         </div>
         <br />
         <div class="contact-links">
           Tel:
-          <a href="tel:+17034318841" 
-          class="contact-links__item"
-          aria-label="link to telephone number"
+          <a
+            href="tel:+17034318841"
+            class="contact-links__item"
+            aria-label="link to telephone number"
             >+1 222 333 4444</a
           ><br />
           Skype:
@@ -121,8 +124,8 @@
             >Ksharples431@gmail.com</a
           >
         </div>
-        <br>
-    
+        <br />
+      </div>
     </main>
     <footer class="page-footer">
       <p class="footer-paragraph">Find me on</p>
