--- a/about-katie.html
+++ b/about-katie.html
@@ -26,7 +26,6 @@
     <header class="page-header">
       <img
         src="images/blue-white-side.jpeg"
-        src="images/logo.jpeg"
         alt="katie sharples logo"
         class="page-header__item"
       />
@@ -129,12 +128,12 @@
           version="1.1"
         >
           <metadata id="metadata8">
-            <rdf:RDF
-              ><cc:Work rdf:about=""
+            <rdf:rdf
+              ><cc:work rdf:about=""
                 ><dc:format>image/svg+xml</dc:format
                 ><dc:type
-                  rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work
-            ></rdf:RDF>
+                  rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:work
+            ></rdf:rdf>
           </metadata>
           <defs id="defs6" />
           <g
