Added link to social media icons and  fixed homepage code link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <span>web</span> developer from Maryland.
         </p>
         <a
-          href="portfolio.html"
+          href="katie-portfolio.html"
           aria-label="link to portfolio page"
           class="portfolio-link"
           >Check out some of my code</a
@@ -90,9 +90,9 @@
     <footer class="page-footer">
       <p class="footer-paragraph">Find me on</p>
       <div class="social-media">
-        <img src="images/icons/github-icon.svg" alt="Github icon" />
-        <img src="images/icons/twitter-icon.svg" alt="Twitter icon" />
-        <img src="images/icons/linkedin-icon.svg" alt="LinkedIn icon" />
+        <a href="https://github.com/ksharples431" target="_blank"> 
+          <img src="images/icons/github-icon.svg" alt="Github icon">
+        </a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
