--- a/about-katie.html
+++ b/about-katie.html
@@ -76,38 +76,6 @@
           garden.
         </p>
         <p>I am looking forward to a learning a new set of skills.</p>
-        <!-- <h2>Experience</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Skills</th>
-              <th>Years of Experience</th>
-              <th>Level of Expertise</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>HTML</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>CSS</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>JavaScript</td>
-              <td>1</td>
-              <td>Beginner</td>
-            </tr>
-            <tr>
-              <td>Managment</td>
-              <td>15</td>
-              <td>Intermediate</td>
-            </tr>
-          </tbody>
-        </table> -->
         <a href="files/cv.pdf" class="cv-button" download
           >Download my CV</a
         >
@@ -2458,9 +2426,9 @@
     <footer class="page-footer">
       <p class="footer-paragraph">Find me on</p>
       <div class="social-media">
-        <img src="images/icons/github-icon.svg" alt="Github icon" />
-        <img src="images/icons/twitter-icon.svg" alt="Twitter icon" />
-        <img src="images/icons/linkedin-icon.svg" alt="LinkedIn icon" />
+        <a href="https://github.com/ksharples431" target="_blank"> 
+          <img src="images/icons/github-icon.svg" alt="Github icon">
+        </a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
