--- a/katie-portfolio.html
+++ b/katie-portfolio.html
@@ -112,9 +112,9 @@
     <footer class="page-footer">
       <p class="footer-paragraph">Find me on</p>
       <div class="social-media">
-        <img src="images/icons/github-icon.svg" alt="Github icon" />
-        <img src="images/icons/twitter-icon.svg" alt="Twitter icon" />
-        <img src="images/icons/linkedin-icon.svg" alt="LinkedIn icon" />
+        <a href="https://github.com/ksharples431" target="_blank"> 
+          <img src="images/icons/github-icon.svg" alt="Github icon">
+        </a>
       </div>
     </footer>
     <script src="js/tota11y.min.js"></script>
